integration with api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 project(laser_uav_managers)
 
 if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 20)
+  set(CMAKE_CXX_STANDARD 17)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
 endif()
 
@@ -16,78 +16,83 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_package(laser_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(nav_msgs REQUIRED)
+find_package(px4_msgs REQUIRED)
 find_package(laser_uav_controllers REQUIRED)
-find_package(mpc++ CONFIG REQUIRED)
+
+set(acados_include "$ENV{ACADOS_SOURCE_DIR}/include")
+set(acados_lib "$ENV{ACADOS_SOURCE_DIR}/lib")
+set(full_model_build ${laser_uav_controllers_DIR}/../../../include/scripts/c_generated_code)
 
 set(dependencies
 Eigen3
 rclcpp 
 rclcpp_lifecycle 
 rclcpp_components
+nav_msgs 
 std_srvs 
-nav_msgs
-std_msgs
+px4_msgs
 laser_msgs
-geometry_msgs
 laser_uav_controllers
-mpc++
 )
 
 find_library(laser_uav_controllers laser_uav_controllers)
 
+link_directories(${full_model_build})
+
+message(WARNING "${full_model_build}\n\n\n\n")
+
 include_directories(
   include
-  # ${full_model_build}
-	# ${acados_include}
-	# ${acados_include}/blasfeo/include/
-	# ${acados_include}/hpipm/include/
-	# ${acados_include}/acados/
-	# ${acados_include}/qpOASES_e/
-  ${mpc++_INCLUDE_DIRS}
+  ${full_model_build}
+	${acados_include}
+	${acados_include}/blasfeo/include/
+	${acados_include}/hpipm/include/
+	${acados_include}/acados/
+	${acados_include}/qpOASES_e/
   ${EIGEN3_INCLUDE_DIR}
 )
 
-# link_directories(${full_model_build})
+set(executable_name control_manager)
 
-add_executable(control_manager
+add_executable(${executable_name}
   src/control_manager_main.cpp
 )
 
-add_library(control_manager_core SHARED
+set(library_name control_manager_core)
+
+add_library(${library_name} SHARED
   src/control_manager_node.cpp
 )
 
-ament_target_dependencies(control_manager
+ament_target_dependencies(${executable_name}
   ${dependencies}
 )
 
-target_link_libraries(control_manager
-  mpc++
+target_link_libraries(${executable_name}
   control_manager_core
-  ${laser_uav_controllers}
-  # ${full_model_build}/libacados_ocp_solver_uav.so
-	# ${acados_lib}/libacados.so
+	${laser_uav_controllers}
+  ${full_model_build}/libacados_ocp_solver_quadrotor_ode.so
+	${acados_lib}/libacados.so
 )
 
-ament_target_dependencies(control_manager_core
+ament_target_dependencies(${library_name}
   ${dependencies}
 )
 
-target_include_directories(control_manager_core PRIVATE src/include)
+target_include_directories(${library_name} PRIVATE src/include)
 
-rclcpp_components_register_nodes(control_manager_core "laser_uav_managers::ControlManagerNode")
+rclcpp_components_register_nodes(${library_name} "laser_uav_managers::ControlManagerNode")
 
-install(TARGETS control_manager_core
+install(TARGETS ${library_name}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
 
-install(TARGETS control_manager 
+install(TARGETS ${executable_name}
   RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
 
