--- a/params/control_manager/x500.yaml
+++ b/params/control_manager/x500.yaml
@@ -31,7 +31,8 @@
         # This is the Weight Matrix that penalize state error in FC
         # {W_position_xy, W_position_z, W_rotation_xy, W_rotation_z, W_speed, W_angular_speed}
         # Q: [0.5, 1.0, 0.2, 3.0, 0.2, 0.5] # Used in simulation on gazebo #stable
-        Q: [1.0, 1.0, 0.2, 10.0, 0.5, 1.0] # Used in simulation on gazebo
+        # Q: [1.0, 10.0, 0.2, 100.0, 0.5, 0.5] # Used in simulation on gazebo
+        Q: [0.5, 1.0, 0.2, 3.0, 0.2, 0.5] # Used in simulation on gazebo by JAN-HREBEC
 
           # This is the weight Matrix that penalize input control effort in FC
         R: 0.0 # stable on gazebo
