add a layout for plot to eval control tracking error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,8 @@ install(DIRECTORY include/
 install(DIRECTORY
   launch
   params
+  plotjuggler
+  scripts
   DESTINATION share/${PROJECT_NAME}
 )
 
